# sfshr

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: deploy.yml  test.yml
client/: Cargo.toml  README.md
client/src/: main.rs
client/src/transfer/: mod.rs
server/: .dockerignore  Cargo.toml  Dockerfile  config  docker-compose.yml
server/src/: config.rs  main.rs
server/src/thread_pool/: mod.rs
tests/: Cargo.toml
tests/tests/: expire-config  key  normal-config  size-exceed-config  transfers.rs
