[package]
name = "sfshr"
version = "1.1.0"
license = "MIT"
description = "Command-line tool for secure, end-to-end encrypted file sharing"
categories = ["command-line-utilities", "filesystem", "network-programming", "cryptography"]
keywords = ["share", "file", "file-share", "encrypted"]
authors = ["ondralukes <mail@ondralukes.cz>"]
repository = "https://github.com/ondralukes/sfshr"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
openssl = "0.10.30"
base64 = "0.12.3"
hex = "0.4.2"
simpletcp = "1.2.1"
tar = "0.4.30"